Bug 189085: Windows focus handling semi-rewrite r=danm, sr=jag