xpfe/appshell/src/nsXULWindow.cpp
@@ -103,7 +103,6 @@ nsXULWindow::nsXULWindow() : mChromeTreeOwner(nsnull),
    mDebuting(PR_FALSE), mChromeLoaded(PR_FALSE), 
    mShowAfterLoad(PR_FALSE), mIntrinsicallySized(PR_FALSE),
    mCenterAfterLoad(PR_FALSE), mIsHiddenWindow(PR_FALSE),
-   mHadChildWindow(PR_FALSE),
    mZlevel(nsIXULWindow::normalZ), mContextFlags(0)
 {
 }
@@ -252,9 +251,8 @@ NS_IMETHODIMP nsXULWindow::GetContentShellById(const PRUnichar* aID,
 
 NS_IMETHODIMP nsXULWindow::AddChildWindow(nsIXULWindow *aChild)
 {
-  // we don't keep a list; we just need to know if there ever was one
-  mHadChildWindow = PR_TRUE;
-  return NS_OK;
+   // we're not really keeping track of this right now
+   return NS_OK;
 }
 
 NS_IMETHODIMP nsXULWindow::RemoveChildWindow(nsIXULWindow *aChild)
@@ -349,12 +347,6 @@ NS_IMETHODIMP nsXULWindow::Destroy()
    if(!mWindow)
       return NS_OK;
 
-#ifdef XP_PC
-   /* must activate parent before unregistering, since unregistering
-      affects the topmost window status, which activateparent uses. */
-   ActivateParent();
-#endif
-
    nsCOMPtr<nsIAppShellService> appShell(do_GetService(kAppShellServiceCID));
    if(appShell)
      appShell->UnregisterTopLevelWindow(NS_STATIC_CAST(nsIXULWindow*, this));
@@ -400,6 +392,17 @@ NS_IMETHODIMP nsXULWindow::Destroy()
    if (mWindow)
      mWindow->Show(PR_FALSE);
 
+#ifdef XP_PC
+  // We need to explicitly set the focus on Windows
+  nsCOMPtr<nsIBaseWindow> parent(do_QueryReferent(mParentWindow));
+  if (parent) {
+    nsCOMPtr<nsIWidget> parentWidget;
+    parent->GetMainWidget(getter_AddRefs(parentWidget));
+    if (parentWidget)
+      parentWidget->PlaceBehind(0, PR_TRUE);
+  }
+#endif
+   
    mDOMWindow = nsnull;
    if(mDocShell) {
       nsCOMPtr<nsIBaseWindow> shellAsWin(do_QueryInterface(mDocShell));
@@ -1668,59 +1671,6 @@ void nsXULWindow::EnableParent(PRBool aEnable)
     parentWindow->GetMainWidget(getter_AddRefs(parentWidget));
   if (parentWidget)
     parentWidget->Enable(aEnable);
-}
-
-/* Bring our parent window to the top, if we are the topmost window.
-   This stupid-sounding method is used to hack around a bug in the Windows OS
-   which causes it to seemingly activate a random window instead of the
-   expected one after closing at least two owned windows. (Mozilla bug
-   22658). This method is expected to be called during window teardown.
-*/
-void nsXULWindow::ActivateParent() {
-
-  // this is only a problem for stacks of at least three windows, and
-  // the unexpected focus we cause to happen in this method is screwing up
-  // focus. so limit the circumstances in which we do this by only activating
-  // the parent if we were part of a stack.
-  if (!mHadChildWindow)
-    return;
-
-  // do we have an owner/parent window?
-  nsCOMPtr<nsIBaseWindow> parent(do_QueryReferent(mParentWindow));
-  if (!parent)
-    return;
-
-  // are we the topmost window?
-  nsCOMPtr<nsIWindowMediator> windowMediator(do_GetService(kWindowMediatorCID));
-  if (!windowMediator)
-    return;
-
-  nsCOMPtr<nsIDOMWindowInternal> topDOMWindow;
-  windowMediator->GetMostRecentWindow(nsnull, getter_AddRefs(topDOMWindow));
-  nsCOMPtr<nsIDOMWindowInternal> ourDOMWindow(do_GetInterface(mDocShell));
-
-  if (ourDOMWindow != topDOMWindow)
-    return;
-
-  // yes, we're topmost. is our parent HiddenWindow?
-  nsCOMPtr<nsIAppShellService> appshell(do_GetService(kAppShellServiceCID));
-  if (appshell) {
-    nsCOMPtr<nsIXULWindow> hiddenWindow;
-    appshell->GetHiddenWindow(getter_AddRefs(hiddenWindow));
-    if (hiddenWindow) {
-      nsCOMPtr<nsIBaseWindow> baseHiddenWindow(do_GetInterface(hiddenWindow));
-      // somebody screwed up somewhere. hiddenwindow shouldn't be anybody's
-      // parent. still, when it happens, skip activating it.
-      if (baseHiddenWindow == parent)
-        return;
-    }
-  }
-
-  // alright already. bring our parent to the top.
-  nsCOMPtr<nsIWidget> parentWidget;
-  parent->GetMainWidget(getter_AddRefs(parentWidget));
-  if (parentWidget)
-    parentWidget->PlaceBehind(0, PR_TRUE);
 }
 
 // Constrain the window to its proper z-level
